welcome.lessons.welcome.bat.bool1.NearHundred.scala.code
def nearHundred(n:Int): Boolean = n match {
	var c:Int = Math.abs(100 - n)
	var d:Int = Math.abs(200 - n)
	case c<10 => true 
	case d<10 => true
	case _ => false
}

